# backend/api/swagger.json
@@ -100,6 +100,11 @@
                 },
                 "tags": [
                     "users"
+                ],
+                "security": [
+                    {
+                        "cookie": []
+                    }
                 ]
             }
         },
@@ -130,6 +135,11 @@
                 },
                 "tags": [
                     "users"
+                ],
+                "security": [
+                    {
+                        "cookie": []
+                    }
                 ]
             },
             "delete": {
@@ -158,6 +168,11 @@
                 },
                 "tags": [
                     "users"
+                ],
+                "security": [
+                    {
+                        "cookie": []
+                    }
                 ]
             }
         },
@@ -332,7 +347,7 @@
                 ]
             }
         },
-        "/auth/me": {
+        "/auth/personal-details": {
             "get": {
                 "operationId": "AuthController_me",
                 "parameters": [],
@@ -360,6 +375,41 @@
                 },
                 "tags": [
                     "auth"
+                ]
+            }
+        },
+        "/auth/google/login": {
+            "get": {
+                "operationId": "GoogleController_googleAuth",
+                "parameters": [],
+                "responses": {
+                    "200": {
+                        "description": ""
+                    }
+                },
+                "tags": [
+                    "auth/google"
+                ]
+            }
+        },
+        "/auth/google/callback": {
+            "get": {
+                "operationId": "GoogleController_googleCallback",
+                "parameters": [],
+                "responses": {
+                    "200": {
+                        "description": "",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/UserEntity"
+                                }
+                            }
+                        }
+                    }
+                },
+                "tags": [
+                    "auth/google"
                 ]
             }
         }
@@ -412,7 +462,7 @@
                         "type": "string",
                         "nullable": true
                     },
-                    "verified": {
+                    "emailVerified": {
                         "type": "boolean"
                     }
                 },
@@ -423,7 +473,7 @@
                     "firstName",
                     "lastName",
                     "image",
-                    "verified"
+                    "emailVerified"
                 ]
             },
             "ValidationErrorDto": {
