# backend/src/auth/auth.controller.ts
@@ -1,10 +1,10 @@
-import { Controller, Get, Post, Body, Res, UseGuards, Query } from '@nestjs/common';
+import { Controller, Get, Post, Body, Res, UseGuards, Query, Req, HttpException, HttpStatus } from '@nestjs/common';
 import { ApiBadRequestResponse, ApiConflictResponse, ApiCookieAuth, ApiTags } from '@nestjs/swagger';
 import { ValidationErrorDto } from 'src/shared/dto/validation-error.dto';
 import { UsersService } from 'src/users/users.service';
 import { CredentialLogin } from './dto/credential-login.dto';
 import { Response } from 'express';
-import { MailService } from 'src/mail/mail.service';
+import { MailService } from 'src/shared/mail/mail.service';
 import { AccessTokenService } from './access-token/access-token.service';
 import { RefreshTokenService } from './refresh-token/refresh-token.service';
 import { Payload } from './entities/auth.entity';
@@ -14,6 +14,8 @@ import { AccessTokenGuard } from './access-token/access-token.gaurd';
 import { UserEntity } from 'src/users/entities/user.entity';
 import { JwtService } from '@nestjs/jwt';
 import { VerifyEmailDto } from './dto/verify-emaill.dto';
+import { GoogleGaurd } from './google/google.gaurd';
+import { CreateUserDto } from 'src/users/dto/create-user.dto';
 
 
 @Controller('auth')
@@ -27,16 +29,19 @@ export class AuthController {
     private readonly accessTokenService: AccessTokenService,
     private readonly refreshTokenService: RefreshTokenService) { }
 
-
   @Post("login")
   async credentailLogin(
     @Res({ passthrough: true }) response: Response,
-    @Body() credentail: CredentialLogin) {
-    const user = await this.userService.validateUserCredentail(credentail.email, credentail.password);
-    this.sendToken(response, user);
-    return user;
+    @Body() {email, password}: CredentialLogin) {
+    const user = await this.userService.findOne({email});
+   
+    if (user && await user.comparePassword(password)) {
+      this.accessTokenService.sendCookie(response, user);
+      this.refreshTokenService.sendCookie(response, user);
+      return user;
+    }
+    throw new HttpException('Invalid credentials', HttpStatus.UNAUTHORIZED);
   }
-
 
   @Post("signup")
   @ApiConflictResponse({ description: 'Unable to create user' })
@@ -44,47 +49,60 @@ export class AuthController {
     const data = await this.userService.create(body);
     const token = this.jwtService.sign({ sub: data.id, email: data.email, role: data.role });
     this.mailService.sendVerificationMail(data.email, token);
-    return {
-      message: "User created successfully"
-    };
+    return { message: "User created successfully" };
   }
 
   @Get('verify-email')
   async verifyEmail(@Query() data: VerifyEmailDto) {
     const { sub } = this.jwtService.verify(data.token);
-    await this.userService.verifyEmail(sub);
-
-
+    await this.userService.update(sub, { emailVerified: true });
+    return { message: "Email verified successfully" }
   }
 
   @Post("logout")
   async logout(@Res({ passthrough: true }) response: Response) {
     this.refreshTokenService.clearCookie(response)
     this.accessTokenService.clearCookie(response);
+    return { message: "Logout successfully" };
   }
 
   @Get('refresh')
   @ApiCookieAuth()
   @UseGuards(RefreshTokenGuard)
   async refresh(@AuthUser() id: number, @Res({ passthrough: true }) response: Response) {
-    const user = await this.userService.findOne(id);
-    this.sendToken(response, user);
+    const user = await this.userService.findOne({ id });
+    this.accessTokenService.sendCookie(response, user);
     return user;
   }
 
 
-  @Get('me')
+  @Get('personal-details')
   @UseGuards(AccessTokenGuard)
   me(@AuthUser() id: number) {
-    return this.userService.findOne(id);
+    return this.userService.findOne({ id });
   }
 
-  sendToken(
-    response: Response,
-    { email, id: sub, role }: UserEntity) {
-    const token: Payload = { email, sub, role };
-    this.accessTokenService.sendCookie(response, token);
-    this.refreshTokenService.sendCookie(response, token);
+
+  @Get('/google/login')
+  @UseGuards(GoogleGaurd)
+  googleLogin(@Req() _) {
+    console.log("google login");
+   }
+
+  @UseGuards(GoogleGaurd)
+  @Get('google/callback')
+  async googleCallback(@Req() req: Request, @Res({passthrough: true}) res: Response) {
+    const { user: userData } = req as any;
+    let user = await this.userService.findOne({ email: userData.email});
+    
+    if (!user) 
+      user = await this.userService.create(userData as CreateUserDto);
+    
+    this.accessTokenService.sendCookie(res, user);
+    this.refreshTokenService.sendCookie(res, user);
+    return user;
+    
   }
+ 
 
 }
